# fer-interactive-computer-graphics-labs

./: .gitignore  CMakeLists.txt  README.md
dependencies/examples/: CMakeLists.txt
primjerASSIMP/sources/: main.cpp
primjerGLM/sources/: main.cpp
vjezba1/sources/: main.cpp
vjezba10/headers/: Light.hpp  Transform.hpp
vjezba10/shaders/: shader.frag  shader.vert  shaderDepthMap.vert
vjezba10/sources/: Mesh.cpp  main.cpp
vjezba2/: CMakeLists.txt
vjezba2/headers/: Lines.h  PolgyonEelement.h  Polygon.h
vjezba2/sources/: Lines.cpp  Polgyon.cpp  PolygonElement.cpp  main.cpp
vjezba3/sources/: main.cpp
vjezba4/headers/: Mesh.hpp  Shader.h
vjezba4/resources/: labos2.rar
vjezba4/shaders/: shader2.geom
vjezba4/sources/: Mesh.cpp  Shader.cpp  main.cpp
vjezba5a/headers/: Mesh.hpp  Transform.hpp
vjezba5a/shaders/: shader2.frag
vjezba5a/sources/: Mesh.cpp  Transform.cpp  main.cpp
vjezba5b/sources/: Mesh.cpp  Transform.cpp  main.cpp
vjezba6/: CMakeLists.txt
vjezba6/headers/: Mesh.hpp  Object.hpp  Shader.h  Transform.hpp
vjezba6/shaders/: cullingProjcSystem.frag  cullingProjcSystem.geom  cullingSceneSystem.frag  cullingSceneSystem.geom  shader.frag  shader.geom  shader.vert  shader2.geom  shader2.vert
vjezba6/sources/: Mesh.cpp  Object.cpp  Shader.cpp  Transform.cpp  main.cpp
vjezba7/headers/: Camera.hpp  Curve.hpp  Object.hpp
vjezba7/shaders/: cullingProjcSystem.frag  cullingProjcSystem.geom  cullingProjcSystem.vert  shader.frag  shader.geom  shader.vert  shader2.frag  shader2.geom  (+1 more)
vjezba8a/: CMakeLists.txt
vjezba8b/: CMakeLists.txt
(+40 files in other folders)
